Working on markup and resources

--- a/res/main/i18n/default/lists.json
+++ b/res/main/i18n/default/lists.json
@@ -8,8 +8,12 @@
 		"band5": "Band 5",
 		"band6": "Band 6",
 		"band7": "Band 7",
+		"boost_ing": "Boost",
+		"boosting": "Boosting",
+		"classic": "Classic",
 		"down_ward": "Down",
 		"downward": "Downward",
+		"modern": "Modern",
 		"split": "Split",
 		"split_left": "Split Left",
 		"split_middle": "Split Mid",
