--- a/res/main/i18n/es/lists.json
+++ b/res/main/i18n/es/lists.json
@@ -8,8 +8,10 @@
 		"band5": "Banda 5",
 		"band6": "Banda 6",
 		"band7": "Banda 7",
+		"classic": "Clásico",
 		"down_ward": "Abajo",
 		"downward": "Hacia abajo",
+		"modern": "Moderno",
 		"split": "Dividir",
 		"split_left": "Dividir Izquierda",
 		"split_middle": "Dividir Medio",
