--- a/res/main/i18n/fr/lists.json
+++ b/res/main/i18n/fr/lists.json
@@ -8,8 +8,10 @@
 		"band5": "Bande 5",
 		"band6": "Bande 6",
 		"band7": "Bande 7",
+		"classic": "Classique",
 		"down_ward": "Baisse",
 		"downward": "À la baisse",
+		"modern": "Moderne",
 		"split": "Séparé",
 		"split_left": "Séparé gauche",
 		"split_middle": "Séparé milieu",
