--- a/res/main/i18n/it/lists.json
+++ b/res/main/i18n/it/lists.json
@@ -8,8 +8,10 @@
 		"band5": "Banda 5",
 		"band6": "Banda 6",
 		"band7": "Banda 7",
+		"classic": "Classico",
 		"down_ward": "Giù",
 		"downward": "Verso il basso",
+		"modern": "Moderno",
 		"split": "Split",
 		"split_left": "Split Sinistro",
 		"split_middle": "Split Centrale",
