--- a/res/main/i18n/ru/lists.json
+++ b/res/main/i18n/ru/lists.json
@@ -8,8 +8,12 @@
 		"band5": "Полоса 5",
 		"band6": "Полоса 6",
 		"band7": "Полоса 7",
+		"boost_ing": "Усил",
+		"boosting": "Усиливающий",
+		"classic": "Классический",
 		"down_ward": "Пониж",
 		"downward": "Понижающий",
+		"modern": "Современный",
 		"split": "Разделение",
 		"split_left": "Разделение левого",
 		"split_middle": "Разделение центра",
