Updated Italian Translation

--- a/res/main/i18n/it/lists.json
+++ b/res/main/i18n/it/lists.json
@@ -8,6 +8,8 @@
 		"band5": "Banda 5",
 		"band6": "Banda 6",
 		"band7": "Banda 7",
+		"boost_ing": "Boost",
+		"boosting": "Boosting",
 		"classic": "Classico",
 		"down_ward": "Giù",
 		"downward": "Verso il basso",
