--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,8 @@
 * Fixed invalid phase compensation issue of the dry signal for 'Modern' mode.
 * Added all-pass phase compensation for the dry signal for the 'Classic' mode.
 * Updated dependencies and build scripts.
+* Updated build scripts and dependencies.
 
 === 1.0.3 ===
 * Initial release.
+
