--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@
 *******************************************************************************
 
 === 1.0.7 ===
-
+* Updated build scripts and dependencies.
 
 === 1.0.6 ===
 * Added negative boosting gain option in 'Boosting' mode.
