--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@
 *******************************************************************************
 
 === 1.0.8 ===
-
+* Updated build scripts and dependencies.
 
 === 1.0.7 ===
 * Added 'Min' and 'Max' sidechain sources for the multiband compressor.
