Fixed improper behaviour of the bypass switch.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.13 ===
+* Fixed improper behaviour of the bypass switch.
 * Updated build scripts and dependencies.
 
 === 1.0.12 ===
