--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@
 *******************************************************************************
 
 === 1.0.14 ===
-
+* Implemented L/R split mode for stereo versions of compressor.
 
 === 1.0.13 ===
 * Fixed improper behaviour of the bypass switch.
