--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
 
 === 1.0.14 ===
 * Implemented L/R split mode for stereo versions of compressor.
+* Updated build scripts and dependencies.
 
 === 1.0.13 ===
 * Fixed improper behaviour of the bypass switch.
