--- a/res/main/i18n/ru/lists.json
+++ b/res/main/i18n/ru/lists.json
@@ -13,6 +13,7 @@
 		"classic": "Классический",
 		"down_ward": "Пониж",
 		"downward": "Понижающий",
+		"linear_phase": "Линейная фаза",
 		"modern": "Современный",
 		"split": "Разделение",
 		"split_left": "Разделение левого",
