--- a/res/main/i18n/us/lists.json
+++ b/res/main/i18n/us/lists.json
@@ -13,6 +13,7 @@
 		"classic": "Classic",
 		"down_ward": "Down",
 		"downward": "Downward",
+		"linear_phase": "Linear Phase",
 		"modern": "Modern",
 		"split": "Split",
 		"split_left": "Split Left",
