--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@
 *******************************************************************************
 
 === 1.0.15 ===
-
+* Updated build scripts and dependencies.
 
 === 1.0.14 ===
 * Implemented L/R split mode for stereo versions of compressor.
