--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@
 *******************************************************************************
 
 === 1.0.17 ===
-
+* Reduced CPU consumption for Linear Phase and Modern modes.
 
 === 1.0.16 ===
 * Implemented SIMD-optimized curve and gain processing.
