--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@
 === 1.0.18 ===
 * Implemented automatic scale of spectrum graph switch.
 * Aligned the height of the blocks in "cgroup".
+* Implemented split frequency display.
 
 
 === 1.0.17 ===
