--- a/res/main/i18n/default/lists.json
+++ b/res/main/i18n/default/lists.json
@@ -16,6 +16,19 @@
 		"linear_phase": "Linear Phase",
 		"modern": "Modern",
 		"split": "Split",
+		"splits": {
+			"index": {
+				"split_id": "Split #{@id}",
+				"left_id": "Left #{@id}",
+				"mid_id": "Mid #{@id}",
+				"right_id": "Right #{@id}",
+				"side_id": "Side #{@id}"
+			}
+		},
+		"notes": {
+			"full": "{@id}\n{@frequency} Hz\n{@note}{@octave}{@cents}",
+			"unknown": "{@id}\n{@frequency} Hz"
+		},
 		"split_left": "Split Left",
 		"split_middle": "Split Mid",
 		"split_right": "Split Right",
