Updated build scripts and dependencies

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,7 +6,7 @@
 * Implemented automatic scale of spectrum graph switch.
 * Aligned the height of the blocks in "cgroup".
 * Implemented split frequency display.
-
+* Updated build scripts and dependencies.
 
 === 1.0.17 ===
 * Reduced CPU consumption for Linear Phase and Modern modes.
