* Fixed improper phase compensation between Dry and Wet channels in Linear Phase mode

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@
 *******************************************************************************
 
 === 1.0.22 ===
+* Fixed improper phase compensation between Dry and Wet channels in
+  Linear Phase mode.
 * Updated build scripts and dependencies.
 
 === 1.0.21 ===
